pkg/check/testdata/ub/types/invalid/null-map-input.ub
resources: {
  bucket: ext.bucket {
    name: 'bad tags'
    tags: null
    items: []
  }
}
